$Id$

0.9.12: (17Jul2001)
	- changed Modem.pm to deal with vmin problems under Solaris
	- fixed bug in email2page where bodies weren't being chopped correctly
   - fixed Modem.pm to close the device opened by Device::SerialPort

0.9.11: (15May2001)
	- added "maxlines" to email2page.
	- changed (once again) how I reap dead children.  (sendpage)
	- added the ability to write directly to the queues.  (sendpage)
	- updated documentation slightly, some fixes in SNPP module for
	  direct writing.

0.9.10: (20Apr2001)
	- tempfail-notify-after was going off on the very first temp
	  failure, if it was set at all. (PagingCental.pm)
	- ignore-carrier was not boolean. (sendpage)
	- claim shutdown source correctly on children. (sendpage)
	- removed closed pipes from select set correctly (typos). (sendpage)
	- closed the RIGHT file descriptors. (typos, sendpage)
	- added "debug-snpp" for SNPP debugging. (sendpage)
	- added "debug-select" for select-loop debugging. (sendpage)
	- added Randy Emler's postfix instructions to docs/.
	- increased accept queue to 20 in SNPPServer.pm
	- I've wrapped the signal blocker around everything but the
	  select now.  I'm worried this might do bad things, but I
	  haven't been able to prove it yet.  Hmm.

0.9.9: (06Mar2001)
	- improved call-out debugging in Modem.pm
	- corrected pet3 handling, added the 'proto' option to PCs
	- allow whitespace to preceed comments in sendpage.cf
	- fixed "dialout" typo in Modem.pm
	- changed the email-sending error messages
	- fixed bug with empty "from" getting filled to "nobody" on splits
	- improved sendpage.init to be a little more flexible
	- added "Errors-To" field for outbound email
	- fixed bug in "PC logon handshake timeout" in PagingCentral.pm
	- added page-daemon on CC for any failures, if configured
	- added new "fallbackget" for KeesConf to pull PC-overridden variables
	- added "cc-on-error" to both global and PC sections to control if
	  page-daemon will actually get CC's of failed pages